--- a/Game Start/Game Start.vcxproj
+++ b/Game Start/Game Start.vcxproj
@@ -80,11 +80,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Character.cpp" />
     <ClCompile Include="ChatBox.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Map.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Character.h" />
     <ClInclude Include="ChatBox.h" />
     <ClInclude Include="Map.h" />
   </ItemGroup>
