--- a/Game Start/Game Start.vcxproj
+++ b/Game Start/Game Start.vcxproj
@@ -82,8 +82,10 @@
   <ItemGroup>
     <ClCompile Include="Character.cpp" />
     <ClCompile Include="ChatBox.cpp" />
+    <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Map.cpp" />
+    <ClCompile Include="Player.cpp" />
     <ClCompile Include="projectile.cpp" />
   </ItemGroup>
   <ItemGroup>
