--- a/Game Start/Game Start.vcxproj
+++ b/Game Start/Game Start.vcxproj
@@ -83,6 +83,7 @@
     <ClCompile Include="Character.cpp" />
     <ClCompile Include="ChatBox.cpp" />
     <ClCompile Include="Enemy.cpp" />
+    <ClCompile Include="Hud.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Map.cpp" />
     <ClCompile Include="Player.cpp" />
@@ -91,6 +92,7 @@
   <ItemGroup>
     <ClInclude Include="Character.h" />
     <ClInclude Include="ChatBox.h" />
+    <ClInclude Include="Hud.h" />
     <ClInclude Include="Map.h" />
     <ClInclude Include="projectile.h" />
   </ItemGroup>
