--- a/Game Start/Game Start.vcxproj
+++ b/Game Start/Game Start.vcxproj
@@ -80,6 +80,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Assets.cpp" />
     <ClCompile Include="Character.cpp" />
     <ClCompile Include="ChatBox.cpp" />
     <ClCompile Include="Enemy.cpp" />
@@ -90,6 +91,7 @@
     <ClCompile Include="projectile.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Assets.h" />
     <ClInclude Include="Character.h" />
     <ClInclude Include="ChatBox.h" />
     <ClInclude Include="Hud.h" />
