Working potions added and beginning of stores added
So, added useHealthpot and useStampot methods into the Hud class. Also
added some numberofhealthpots/numberofstampots ints into the player
class, along with some getter methods, and removehealthPot/stampot
methods for when one is used.

Started the player off with 1 health pot for testing. Also added a
keyboard even for L in main game loop to deal damage to player, for
testing the use potions methods.

Added some shop screens for the item/vitamin stores, unfinished at the
moment but the look/basic interface elements are there already.

Added an item class, which I'm unsure if I'll use. Pretty sure I'll just
remove it.

Added a use vitamin method into the player class. Takes a char value, h
for health, s for stamina and a for attack. These vitamins permanently
increase the player's stats. So it'll be an easy way for us to put
progression into the game.

However, we should look into putting stat caps in the game. The vitamins
will be quite expensive, but the player could potentially, for example,
gain so much health that the health bar starts going off the side of the
screen.

--- a/Game Start/Game Start.vcxproj
+++ b/Game Start/Game Start.vcxproj
@@ -85,18 +85,22 @@
     <ClCompile Include="ChatBox.cpp" />
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="Hud.cpp" />
+    <ClCompile Include="Item.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Map.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="projectile.cpp" />
+    <ClCompile Include="Store.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Assets.h" />
     <ClInclude Include="Character.h" />
     <ClInclude Include="ChatBox.h" />
     <ClInclude Include="Hud.h" />
+    <ClInclude Include="Item.h" />
     <ClInclude Include="Map.h" />
     <ClInclude Include="projectile.h" />
+    <ClInclude Include="Store.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
