--- a/Game Start/Game Start.vcxproj
+++ b/Game Start/Game Start.vcxproj
@@ -83,11 +83,13 @@
     <ClCompile Include="Assets.cpp" />
     <ClCompile Include="Character.cpp" />
     <ClCompile Include="ChatBox.cpp" />
+    <ClCompile Include="Effects.cpp" />
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="Hud.cpp" />
     <ClCompile Include="Item.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Map.cpp" />
+    <ClCompile Include="Particle.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="projectile.cpp" />
     <ClCompile Include="QuadTree.cpp" />
@@ -97,9 +99,11 @@
     <ClInclude Include="Assets.h" />
     <ClInclude Include="Character.h" />
     <ClInclude Include="ChatBox.h" />
+    <ClInclude Include="Effects.h" />
     <ClInclude Include="Hud.h" />
     <ClInclude Include="Item.h" />
     <ClInclude Include="Map.h" />
+    <ClInclude Include="Particle.h" />
     <ClInclude Include="projectile.h" />
     <ClInclude Include="QuadTree.h" />
     <ClInclude Include="Store.h" />
