--- a/Game Start/Game Start.vcxproj
+++ b/Game Start/Game Start.vcxproj
@@ -83,6 +83,7 @@
     <ClCompile Include="Assets.cpp" />
     <ClCompile Include="Character.cpp" />
     <ClCompile Include="ChatBox.cpp" />
+    <ClCompile Include="Coin.cpp" />
     <ClCompile Include="Effects.cpp" />
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="Hud.cpp" />
@@ -99,6 +100,7 @@
     <ClInclude Include="Assets.h" />
     <ClInclude Include="Character.h" />
     <ClInclude Include="ChatBox.h" />
+    <ClInclude Include="Coin.h" />
     <ClInclude Include="Effects.h" />
     <ClInclude Include="Hud.h" />
     <ClInclude Include="Item.h" />
